// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`HeaderSignIn - Snapshots > matches snapshot for default HeaderSignIn 1`] = `
<div
  class="min-w-0 flex-1 flex-row items-center justify-end gap-3"
>
  <div
    data-testid="search-input"
  >
    Search Input
  </div>
  <div
    data-avatar-image="https://cdn.example.com/avatar/test-pubky-123"
    data-avatar-name="Test User"
    data-avatar-seed="test-pubky-123"
    data-counter="5"
    data-testid="header-navigation-buttons"
  >
    Navigation Buttons
  </div>
</div>
`;

exports[`HeaderSignIn - Snapshots > matches snapshot with custom className 1`] = `
<div
  class="custom-class"
>
  <div
    data-testid="search-input"
  >
    Search Input
  </div>
  <div
    data-avatar-image="https://cdn.example.com/avatar/test-pubky-123"
    data-avatar-name="Test User"
    data-avatar-seed="test-pubky-123"
    data-counter="5"
    data-testid="header-navigation-buttons"
  >
    Navigation Buttons
  </div>
</div>
`;
